First attempt at fixing nav bar

--- a/.gitignore
+++ b/.gitignore
@@ -338,3 +338,5 @@ ASALocalRun/
 
 # BeatPulse healthcheck temp database
 healthchecksdb
+/Database/Settings1.Designer.cs
+/Database/Settings1.settings
