--- a/Deckel-Shop/appsettings.json
+++ b/Deckel-Shop/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Deckel_Shop-59846A1C-2A64-4117-9747-372A528B9CBE;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=tcp:ourfantasticwebshopdatabaseserver.database.windows.net,1433;Initial Catalog=group1-db1;Persist Security Info=False;User ID=superuser;Password=SuperMario1337;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "LogLevel": {
